--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,12 @@
   min-height: 100vh;
 }
 
+.background {
+  object-fit: cover;
+  opacity: 0.4;
+  z-index: -2;
+}
+
 .description {
   font-size: 0.85rem;
   max-width: var(--max-width);
